--- a/login.css
+++ b/login.css
@@ -4,7 +4,7 @@ body {
 	padding: 0;
 	height: 100vh;
 	overflow: hidden;
-	background-image: url(/e-matatu-system/assets/bumblebee\ .jpg);
+	background-image: url(/assets/bumblebee\ .jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: cover;
